# VI-Coursework

./: README.md  SetLabel.txt  Test.txt  autogen.txt  g9_detection.py  pyproject.toml  requirements.txt
FreenectPlaybackWrapper/: PlaybackWrapper.py  __init__.py
