[tool.poetry]
name = "kinectpythondemo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
opencv-python = "~=4.5.1"
scipy = "~=1.6.1"
scikit-learn = "~=0.24.1"
Library = "^0.0.0"
mahotas = "^1.4.12"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
